zellij-integration-tests/tests/snapshots/nested_sessions__guest_reacts_to_key_after_alt_click.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&guest_after_new_pane)
---
 Zellij (test)  Tab #1  + 
                           Pane #1                         │                           Pane #2
$                                                          │█
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
