zellij-integration-tests/tests/snapshots/nested_sessions__guest_reacts_to_passed_through_new_pane_key.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&guest_after_new_pane)
---
 Zellij (test)  Tab #1  + 
            Pane #1          │           Pane #2
$                            │█
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
                             │
 Ctrl + g  p  t  n  h  s  o  q         ...
