zellij-integration-tests/tests/snapshots/nested_sessions__host_acts_after_guest_cleared_passthrough.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&host_after_guest_gone)
---
 Zellij (test)  Tab #1  + 
                           test-1                          │                           Pane #2
 Zellij (test)  Tab #1  +                            │$
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
───────────────────────────────────────────────────────────┤
                           Pane #3                         │
$ █                                                        │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
