zellij-integration-tests/tests/snapshots/nested_sessions__host_acts_on_key_after_mouse_ascend.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
assertion_line: 439
expression: normalized(&host_after_new_pane)
---
 Zellij (test)  Tab #1  + 
                           test-1                          │                           Pane #2
 Zellij (test)  Tab #1  +                            │$
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           ├────────────────────────────────────────────────────────────
                                                           │                           Pane #3
                                                           │$ █
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ascended into the host Zellij session.                    │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
