zellij-integration-tests/tests/snapshots/nested_sessions__host_ascended_after_clicking_new_tab_button.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&host_after_new_tab)
---
 Zellij (test)  test-1  Tab #2  + 
$ █
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
