zellij-integration-tests/tests/snapshots/nested_sessions__host_ascended_after_focus_host_binding.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&host_ascended)
---
 Zellij (test)  Tab #1  + 
                           test-1                          │                           Pane #2
 Zellij (test)  Tab #1  +                            │$
█                                                          │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ctrl + g  p  t  n  h  s  o  q         ...│
 Ctrl + <p> PANE   n  New  ←↓↑→  Move  x  Close  c  Rename  f  Fullscreen  Alt f  Floating  ...        
