zellij-integration-tests/tests/snapshots/nested_sessions__host_descended_on_first_load.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&host_descended_on_load)
---
 Zellij (test)  test-1  + 
 Zellij (test)  Tab #1  + 
█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
 Ascend: Ctrl + <o> + <]>                                                                                               
