zellij-integration-tests/tests/snapshots/nested_sessions__host_grid_while_descended.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
expression: normalized(&host_descended)
---
 Zellij (test)  Tab #1  + 
                           test-1                          │                           Pane #2
 Zellij (test)  Tab #1  +                            │$
█                                                          │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ctrl + g  p  t  n  h  s  o  q         ...│
 Ascend: Ctrl + <o> + <]>                                                                                               
