zellij-integration-tests/tests/snapshots/nested_sessions__host_keys_act_on_host_before_descend.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
assertion_line: 300
expression: normalized(&host_focused_on_sibling)
---
 Zellij (test)  Tab #1  + 
                           test-1                          │                           Pane #2
 Zellij (test)  Tab #1  +                            │$ █
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
                                                           │
 Ascended into the host Zellij session.                    │
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
