zellij-integration-tests/tests/snapshots/nested_sessions__host_pane_count_unchanged_while_descended.snap
---
source: zellij-integration-tests/tests/nested_sessions.rs
assertion_line: 340
expression: normalized(&host_pane_count_unchanged)
---
 Zellij (test)  Tab #1  + 
                           test-1                          │                           Pane #2
 Zellij (test)  Tab #1  +                            │$
            Pane #1          │           Pane #2           │
$                            │█                            │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
                             │                             │
 Ctrl + g  p  t  n  h  s  o  q         ...│
 Ascend: Ctrl + <o> + <]>
